k8s/dev-serviceb/deny-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: dev-serviceb
spec:
  podSelector: {}
  policyTypes:
    - Ingress
